ft: db partial update, loggiing & gRPC auth
